2012-12-10  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: warn when depends attribute is not matched with
        required entries in package description
        * src/Attributes.cpp: warn when depends attribute is not matched with
        required entries in package description
        * src/AttributesGen.cpp: prune unnecessary includes from RcppExports
        * src/Timer.cpp: fix timer build issues on windows

2012-12-10 Romain Francois <romain@r-enthusiasts.com>

        * src/api.cpp: import r_cast.cpp, coerce.cpp, RcppCommon.cpp
        and debugging.cpp content
        * include/platform/compiler.h: put here compiler specific deduction things
        * src/internal.h: new header to host function declarations for 
        routines that are not exported into Rcpp.h
        * src/Rcpp_init.c: export capabilities (renamed rcpp_capabilities)
        * include/Rcpp/traits/traits.h: master file for all traits includes
        * include/Rcpp/macros/macros.h: master file for all macros includes
        * include/Rcpp/DataFrame.h: just have declaration for DataFrame
        * include/Rcpp/Benchmark/Timer.h: move it into the Rcpp:: namespace
        * include/Rcpp/cache.h: clean
        * include/Rcpp/Reference.h : field was declared const and should not be. 
        added a ConstFieldProxy class for read only use
        
2012-12-09 Romain Francois <romain@r-enthusiasts.com>

        * src/api.cpp: merge many .cpp files here to reduce compile time
        * src/barrier.cpp: merge with cache.cpp to reduce compile time
        * include/Rcpp/exceptions.h: drop forward_uncaught_exceptions_to_r
        * src/exceptions.cpp: drop forward_uncaught_exceptions_to_r
        * src/Date.cpp: merge all Date related files
        
2012-12-08 Romain Francois <romain@r-enthusiasts.com>

        * src/Timer.cpp: implementation of Timer
        * include/Rcpp/Benchmark/Timer.h: internal performance timer, based on
        the code from the microbenchmark package