@@ -1,7 +1,8 @@
 2012-12-10  JJ Allaire <jj@rstudio.org>
 
         * R/Attributes.R: warn when depends attribute is not matched with
-        required entries in package description
+        required entries in package description; add Rtools to PATH for 
+        duration of sourceCpp
         * src/Attributes.cpp: warn when depends attribute is not matched with
         required entries in package description
         * src/AttributesGen.cpp: prune unnecessary includes from RcppExports
